Support building the classis package on Windows in git bash

--- a/classic/package.json
+++ b/classic/package.json
@@ -29,7 +29,7 @@
   },
   "main": "rise/static/main.js",
   "scripts": {
-    "build": "for target in less install-rise-reveal; do npm run $target; done",
+    "build": "bash -c 'for target in less install-rise-reveal; do npm run $target; done'",
     "less": "PATH=./node_modules/.bin:$PATH lessc --autoprefix src/less/main.less rise/static/main.css",
     "watch-less": "./node_modules/.bin/watch 'npm run less' src/less",
     "install-rise-reveal": "cp -r node_modules/rise-reveal/export/ rise/static/",
